mod; update bios items, fix; overflow issue

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,5 @@
 body {
 	background: #fefefe;
-	min-width: 320px;
-	margin: 0;
 }
 .navbar-brand, .navbar-nav>li>a {
 	font-size:12pt;
@@ -26,6 +24,30 @@ h3 a {
 	overflow: hidden;
 	margin-top: 15px;
 }
+.photo-container { width: 100%; }
+.photo-container .photo {
+  height: 245px;
+  width: 100%;
+  background-color: transparent !important;
+  position: relative;
+  -webkit-print-color-adjust: exact;
+}
+.photo-container .photo img {
+  max-height: 245px;
+  max-width: 100%;
+  margin: auto;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+.company-info {
+  max-height: 245px;
+  overflow-y: scroll;
+}
+.company-info h3 { margin-top: 10px;
+}
 .leaflet-right{
 	display: none;
 }
@@ -34,6 +56,7 @@ h3 a {
   text-align: center;
   height: 10rem;
   width: 100%;
+  overflow: hidden;
 }
 .credits {
 	margin: 20px;
@@ -50,4 +73,13 @@ h3 a {
 	background-color:#00A800;
 	color:#fff;
 	padding-bottom:20px;
+}
+
+.vertical-center {
+  min-height: 100%;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
